# FM-Protes-QUBO-Optimization

./: .gitignore  FM_PROTES_QUBO_OPTIMIZATION(5).ipynb  README.md  pyproject.toml  requirements.txt
configs/: _quick.yaml  _quick_hybrid.yaml  _quick_no_fill.yaml  _quick_protes_ttmask.yaml  _quick_valsplit.yaml  knapsack.yaml  knapsack_cem.yaml  knapsack_exact_enum_small.yaml  knapsack_qbsolv.yaml  knapsack_random.yaml  knapsack_random_feasible.yaml  knapsack_sa.yaml  knapsack_tabu.yaml  maxcut_cardinality.yaml  maxcut_cardinality_1000.yaml  maxcut_cardinality_200.yaml  maxcut_cardinality_400.yaml  maxcut_cardinality_600.yaml  maxcut_cardinality_800.yaml  maxcut_cardinality_cem.yaml  maxcut_cardinality_exact_enum_small.yaml  maxcut_cardinality_protes_ttmask.yaml  maxcut_cardinality_qbsolv.yaml  maxcut_cardinality_random.yaml  maxcut_cardinality_random_feasible.yaml  maxcut_cardinality_sa.yaml  maxcut_cardinality_tabu.yaml  onehot_qubo.yaml  onehot_qubo_cem.yaml  onehot_qubo_exact_enum_small.yaml  onehot_qubo_qbsolv.yaml  onehot_qubo_random.yaml  onehot_qubo_random_feasible.yaml  onehot_qubo_sa.yaml  onehot_qubo_tabu.yaml
results/_quick_run/: benchmark.json  best.json  history.csv
results/test_run_small/: benchmark.json
scripts/: aggregate_sweep.py  make_equal_group_sizes.py  plot_history.py  run_experiment.py  run_notebook_onehot.py  run_report_sizes.py  run_sweep.py
src/fm_protes/: QuboMaker.py  __init__.py  constraints.py  data.py  fm.py  loop.py  qubo.py  qubo_solvers.py  surrogate.py  utils.py
src/fm_protes/benchmarks/: Portfolio.py  __init__.py  base.py  (+3 more)
(+9 files in other folders)
